# frustum

./: .flake8  .gitignore  LICENSE  Makefile  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  pyproject.toml  test_simulation.py
frustum_simulator/: __init__.py  main.py
