[tool.poetry]
name = "frustum-bucket-simulator"
version = "1.1.0"
description = "Physics simulation of water draining from a frustum bucket"
authors = ["User"]
readme = "README.md"
packages = [{include = "frustum_simulator"}]

[tool.poetry.dependencies]
python = "^3.13"
matplotlib = "^3.8.0"
numpy = "^2.3.5"

[tool.poetry.group.dev.dependencies]
black = "^25.12.0"
flake8 = "^7.3.0"

[tool.poetry.scripts]
frustum-sim = "frustum_simulator.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py39']

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]
